...
        android:layout_marginBottom="@dimen/sidesPadding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelBTN"
            style="@style/Theme.SimpleTasks.InvertedPrimaryButton"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/elementPadding"
            android:layout_toStartOf="@+id/actionBTN"
            android:text="@string/cancel_popup"
            app:layout_constraintEnd_toStartOf="@+id/actionBTN"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/actionBTN"
...
