<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/taskListItem"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:layout_marginVertical="@dimen/halfElementPadding"
    android:background="@drawable/rounded_corner_background"
    android:backgroundTint="?colorPrimary"
    android:padding="@dimen/elementPadding">
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_placeholder"
        android:contentDescription="@string/task_image" />

    <TextView
        android:id="@+id/titleTask_taskList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elementPadding"
        android:text="@string/placeholder"
        android:textAlignment="viewStart"
        android:textColor="?colorOnPrimary"
...
