...
        android:layout_marginBottom="@dimen/elementPadding"
        android:background="@drawable/rounded_corner_background"
        android:onClick="onProblemClicked"
        android:text="@string/have_problem"
        android:textSize="@dimen/p"
        app:backgroundTint="?buttonBarNegativeButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/ll_taskstep_buttongroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_taskstep_buttongroup"
        android:layout_width="0dp"
...
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/b_taskstep_problem"
        app:layout_constraintStart_toStartOf="@+id/b_taskstep_problem">

        <Button
            android:id="@+id/ib_taskstep_backbutton"
            style="@style/Theme.SimpleTasks.NeutralButton"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/elementPadding"
            android:onClick="onBackClicked"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
...
