...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TasksListFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_list"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</FrameLayout>
