...
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorPrimary"
        android:clickable="true"
        android:contentDescription="@string/add_task"
        app:layout_constraintBottom_toBottomOf="@+id/caretakerLogoutButton"
        app:layout_constraintEnd_toEndOf="@+id/fragmentContainerTaskList"
        app:layout_constraintTop_toTopOf="@+id/caretakerLogoutButton"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/backButton_EditTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginTop="@dimen/sidesPadding"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/back"
...
