...
    android:onClick="onAddTaskClicked"
    tools:context=".ManageTasksActivity">


    <ImageButton
        style="@style/Theme.SimpleTasks.BackButton"
        android:id="@+id/backButton_EditTasks"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginTop="@dimen/sidesPadding"
        android:contentDescription="@string/back"
        android:onClick="onLogoutClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/sidesPadding"
        android:layout_marginTop="@dimen/elementPadding"
        android:layout_marginEnd="@dimen/sidesPadding"
        android:layout_marginBottom="@dimen/elementPadding"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton_EditTasks"
        app:layout_constraintVertical_bias="1.0" />

...
