...
        android:id="@+id/imageButton"
        android:layout_marginBottom="@dimen/sidesPadding"
        android:onClick="onSettingsClicked"
        android:contentDescription="@string/open_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:srcCompat="@drawable/ic_baseline_settings_24" />

    <TextView
        android:id="@+id/titleHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
